--- a/references.bib
+++ b/references.bib
@@ -49,3 +49,12 @@ doi = "10.1371/journal.pcbi.1007838.s006"
 	pages = {e1007838},
 	file = {Full Text PDF:/Users/cooperj2/Zotero/storage/MGC5KMLV/Lydeamore et al. - 2020 - Estimation of the force of infection and infectiou.pdf:application/pdf},
 }
+
+@article{Comont2020,
+author = "Richard Comont",
+title = "{BeeWalk dataset 2008-23}",
+year = "2020",
+month = "5",
+url = "https://figshare.com/articles/dataset/BeeWalk_dataset_2008-19/12280547",
+doi = "10.6084/m9.figshare.12280547.v4"
+}
