--- a/descriptive_stats.qmd
+++ b/descriptive_stats.qmd
@@ -71,6 +71,10 @@ mean(fraps)
 ```{r}
 mean(fraps) %>%
   round(0)
+
+# OR
+
+round(mean(fraps),0)
 ```
 
 We already covered calculating the average manually in our previous tutorial, but we can do that here as well:
@@ -500,7 +504,7 @@ Please also write your own short response to the *Synthesis question* posed, whi
 
 #### 1: UNK Nebraskans
 
-Ever year, the university keeps track of where students are from. The following are data on the number of students admitted to [UNK from the state of Nebraska](https://www.unk.edu/factbook/index.php):
+Ever year, the university keeps track of where students are from. The following are data on the umber of students admitted to [UNK from the state of Nebraska](https://www.unk.edu/factbook/index.php):
 
 ```{r}
 # create dataset in R
