--- a/visual.qmd
+++ b/visual.qmd
@@ -173,3 +173,7 @@ hist(xk,breaks = 100)
 As we can see, this is a very *leptokurtic* distribution.
 
 ## Homework: Chapter 3
+
+From your book, complete problems 3.1, 3.4 & 3.5. Data for these problems are available on *Canvas* and in your book.
+
+Please complete all computer portions in an `rmarkdown` document knitted as an html. Upload any "by hand" calculations as images in the HTML or separately on *Canvas*.
