--- a/visual.qmd
+++ b/visual.qmd
@@ -180,7 +180,7 @@ As we can see, this is a very *leptokurtic* distribution.
 
 A *cumulative frequency plot* shows the overall spread of the data as a cumulative line over the entire dataset. This is another way to see the spread of the data and is often complementary to a histogram.
 
-The following cumulative distribution plot is based on a method from [Geeks for Geeks](https://www.geeksforgeeks.org/cumulative-frequency-graph-in-r/).
+The following cumulative distribution plot is based on the method outlined in [Geeks for Geeks](https://www.geeksforgeeks.org/cumulative-frequency-graph-in-r/).
 
 ```{r}
 # declaring the break points
@@ -217,18 +217,21 @@ print(freq_table)
 
 ```{r}
 # calculating cumulative frequency
-cumulative_freq = c(0, cumsum(freq_table))
+cumulative_freq = c(0, # start at 0, no points
+                    cumsum(freq_table)) # get the cumulative frequency!
 print("Cumulative Frequency")
 print(cumulative_freq)
 ```
 
 ```{r}
 # plotting the data
-plot(break_points, cumulative_freq,
-	xlab="Data Points",
-	ylab="Cumulative Frequency")
+plot(break_points, # x axis is break_points
+     cumulative_freq, # y axis is cumulative frequency
+	xlab="Data Distribution", # x axis label
+	ylab="Cumulative Frequency") # y axis label
 # creating line graph
-lines(break_points, cumulative_freq)
+lines(break_points, # add lines to the graph, this is x
+      cumulative_freq) # this is y for lines
 ```
 
 ## Homework: Chapter 3
