--- a/visual.qmd
+++ b/visual.qmd
@@ -35,6 +35,8 @@ x <- rnorm(n = 1000, # 1000 values
 hist(x)
 ```
 
+**NOTE** that a histogram can only be made on a vector of values. If you try to make a histogram on a data frame, *you will get an error and it will not work*. You have to specify which column you wish to use with the `$` operator. (For example, for dataframe `xy` with columns `x` and `y`, you would use `hist(xy$y)`).
+
 We can up the number of bins to see this better.
 
 ```{r}
@@ -118,7 +120,7 @@ library(moments)
 skewness(x)
 ```
 
-Generally, a value between $-1$ and $+1$ for skewness is "acceptable" and not considered overly skewed. Positive values indicate "right" skew and negative values indicate a "left" skew. If something is too skewed, it may violate assumptions of normality and thus need *non-parametric* tests rather than our standard parametric tests - something we will cover later!
+Generally, a **value between** $-1$ **and** $+1$ **for skewness is "acceptable"** and not considered overly skewed. Positive values indicate "right" skew and negative values indicate a "left" skew. If something is too skewed, it may violate assumptions of normality and thus need *non-parametric* tests rather than our standard parametric tests - something we will cover later!
 
 Let's look at a skewed dataset. We are going to artificially create a skewed dataset from our `x` vector.
 
@@ -142,9 +144,9 @@ As we can see, the above is a heavily skewed dataset with a positive ("right") s
 
 Kurtosis refers to how sharp or shallow the peak of the distribution is (*platykurtic* vs. *leptokurtic*). Remember - *platy*kyrtic are *plateau*kurtic, wide and broad like a plateau, and *leptokurtic* distributions are sharp. Intermediate distributions that are roughly normal are *mesokurtic*.
 
-Much like skewness, kurtosis values of $> 2$ and $< -2$ are generally considered extreme, and thus not mesokurtic. This threshold can vary a bit based on source, but for this class, we will use a threshold of $\pm 2$ for both skewness and kurtosis.
+Much like skewness, **kurtosis values of** $> 2$ **and** $< -2$ **are generally considered extreme**, and thus not mesokurtic. This threshold can vary a bit based on source, but for this class, we will use a threshold of $\pm 2$ for both skewness and kurtosis.
 
-Let's see the kurtosis of `x`. *Note* that when doing the equation, a normal distribution actually has a kurtosis of $3$; thus, we are doing kurtosis $-3$ to "zero" the distribution and make it comparable to skewness.
+Let's see the kurtosis of `x`. ***Note*** that when doing the equation, a normal distribution actually has a kurtosis of $3$; **thus, we are doing kurtosis** $-3$ **to "zero" the distribution and make it comparable to skewness**.
 
 ```{r}
 hist(x)
@@ -181,6 +183,10 @@ As we can see, this is a very *leptokurtic* distribution.
 A *cumulative frequency plot* shows the overall spread of the data as a cumulative line over the entire dataset. This is another way to see the spread of the data and is often complementary to a histogram.
 
 The following cumulative distribution plot is based on the method outlined in [Geeks for Geeks](https://www.geeksforgeeks.org/cumulative-frequency-graph-in-r/).
+
+### If data are not in histogram format
+
+You will need to create a frequency table to make them be in histogram format.
 
 ```{r}
 # declaring the break points
@@ -234,6 +240,27 @@ lines(break_points, # add lines to the graph, this is x
       cumulative_freq) # this is y for lines
 ```
 
+### If data are in histogram format
+
+If you have a list of frequencies (say, *for river discharge over several years*), you only need to do the `cumsum` function. For example:
+
+```{r}
+y <- c(1 ,2 ,4, 8, 16, 8, 4, 2, 1)
+
+sum_y <- cumsum(y)
+
+print(y)
+print(sum_y)
+```
+
+Now we can see we have out cumulative sums. Let's plot these. **NOTE** that this method will *not* have the x variables match the dataset you started with, it will only plot the curve based on the number of values given.
+
+```{r}
+plot(x = 1:length(sum_y), # get length of sum_y, make x index
+     y = sum_y, # plot cumulative sums
+     type = "l") # make a line plot
+```
+
 ## Homework: Chapter 3
 
 From your book, complete problems 3.1, 3.4 & 3.5. Data for these problems are available on *Canvas* and in your book.
@@ -244,7 +271,7 @@ From your book, complete problems 3.1, 3.4 & 3.5. Data for these problems are av
 
 For example, see the following. For reference:
 
-- `c` means "contatenate", or place things together in an object.
+-   `c` means "concatenate", or place things together in an object.
 
 ```{r}
 # lower bounds for 100-199, 200-300
@@ -263,3 +290,7 @@ barplot(y,
 ### Directions
 
 Please complete all computer portions in an `rmarkdown` document knitted as an html. Upload any "by hand" calculations as images in the HTML or separately on *Canvas*.
+
+## Addendum
+
+With thanks to Hernan Vargas & Riley Grieser for help in formatting this page. Additional comments provided by BIOL 305 classes.
